10 Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  ingressClassName: nginx # kubectl get ingressclass
  rules:
  - host: example.internal # change
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service1 # must match service created early
            port:
              number: 80
  - host: example2.internal
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service2 # must match  the second service created early
            port:
              number: 80
