10 Ingress/name-based-virtual-hosting-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: second-ingress
spec:
  rules:
  - host: example.internal
    http:
      paths:
      - backend:
          service:
            name: example-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: demo.internal
    http:
      paths:
      - backend:
          service:
            name: demo-service
            port:
              number: 80
        path: /
        pathType: Prefix

# kubectl create ingress first-ingress --rule="example.internal/*=example-service:80"
