10 Ingress/named-and-path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: named-path-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: app-1-service
            port:
              number: 80
        path: /app-1
        pathType: Exact
      - backend:
          service:
            name: app-2-service
            port:
              number: 80
        path: /app-2
        pathType: Exact

# kubectl create ingress named-and-path-ingress --rule=example.com/=app-1:80 --dry-run=client -o yaml
#change the path to the one you want.
